Add - Session API
